Added additional accessibility documentation

--- a/demo-app/app/demo/demo-card/demo-card.html
+++ b/demo-app/app/demo/demo-card/demo-card.html
@@ -13,9 +13,9 @@
             <ign-card-main>
                 <ign-card-header-container><ign-card-toolbar>
                     <ign-card-title>This is a Card Title Component.</ign-card-title>
-                    <button mat-icon-button> <mat-icon style="color:lightgray" class="material-icons">check</mat-icon></button>
-                    <button mat-icon-button> <mat-icon style="color:lightgray" class="material-icons">menu</mat-icon></button>
-                    <button mat-icon-button> <mat-icon style="color:lightgray" class="material-icons">more</mat-icon></button>
+                    <button mat-icon-button> <mat-icon style="color:lightgray" class="material-icons" aria-hidden="false" aria-label="check">check</mat-icon></button>
+                    <button mat-icon-button> <mat-icon style="color:lightgray" class="material-icons" aria-hidden="false" aria-label="menu">menu</mat-icon></button>
+                    <button mat-icon-button> <mat-icon style="color:lightgray" class="material-icons" aria-hidden="false" aria-label="more">more</mat-icon></button>
                 </ign-card-toolbar></ign-card-header-container>
                 <ign-card-section>
                     <ign-card-header-container> <ign-card-section-title>Here's a Card Section Title Component.</ign-card-section-title></ign-card-header-container>
