--- a/demo-app/app/demo/demo-form/demo-form.html
+++ b/demo-app/app/demo/demo-form/demo-form.html
@@ -9,7 +9,7 @@
 
             <form [formGroup]="form"> <ign-card-section> <div fxLayout="column">
                 <mat-form-field ignSizeLarge>
-                    <mat-select><mat-option da="jobSelect-empty" [value]="null">Pick me!</mat-option></mat-select>
+                    <mat-select aria-label="Open example mat select"><mat-option da="jobSelect-empty" [value]="null">Pick me!</mat-option></mat-select>
                 </mat-form-field></div></ign-card-section>
             </form>
             Click the form above!
@@ -18,7 +18,7 @@
         <table style="width:100%">
             <p>&lt;form [formGroup]="form"&gt; &lt;ign-card-section&gt; &lt;div fxLayout="column"&gt;</p>
             <p> &nbsp;&nbsp;&lt;mat-form-field ignSizeLarge&gt;</p>
-            <p>&nbsp;&nbsp;&nbsp;&nbsp;&lt;mat-select>&lt;mat-option da="jobSelect-empty" [value]="null">Pick me!&lt;/mat-option&gt;&lt;/mat-select&gt;</p>
+            <p>&nbsp;&nbsp;&nbsp;&nbsp;&lt;mat-select aria-label="open example mat select">&lt;mat-option da="jobSelect-empty" [value]="null">Pick me!&lt;/mat-option&gt;&lt;/mat-select&gt;</p>
             <p>&nbsp;&nbsp;&lt;/mat-form-field&gt;&lt;/div>&lt;/ign-card-section&gt;</p>
             <p> &lt;/form&gt;</p>
             <p> Click the form above!</p>
