--- a/demo-app/app/demo/demo-sidenav/demo-sidenav.html
+++ b/demo-app/app/demo/demo-sidenav/demo-sidenav.html
@@ -16,7 +16,7 @@
     <mat-tab label="HTML"><div class="tab-height">
         <table style="width:100%">
             <p> &lt;mat-sidenav-container&gt;</p>
-            <p>&nbsp;&lt;mat-sidenav #sidenav class="sidenav" mode="side" opened="false" [fixedInViewport]="true" [fixedTopGap]="headerHeight + 8"&gt;</p>
+            <p>&nbsp;&lt;mat-sidenav #sidenav class="sidenav" mode="side" opened="false" [fixedInViewport]="true"  aria-expanded="true" [fixedTopGap]="headerHeight + 8"&gt;</p>
             <p>&nbsp;&nbsp;&lt;ul&gt;</p>
             <p>&nbsp;&nbsp;&nbsp;&lt;li *ngFor="let item of navItems"&gt;</p>
             <p>&nbsp;&nbsp;&nbsp;&nbsp;&lt;a [routerLink]="[item.route]"&gt;	&#123; item.name &#125;&lt;/a&gt;</p>
@@ -27,8 +27,8 @@
             <p>&nbsp;&nbsp;&lt;mat-card&gt;</p>
             <p> &nbsp;&nbsp;&nbsp;&lt;header #header&gt;</p>
             <p>&nbsp;&nbsp;&nbsp;&nbsp;&lt;mat-toolbar style="background-color: white; color: #424949" class="mat-elevation-z5"&gt;</p>
-            <p> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&lt;button mat-icon-button&gt; &lt;mat-icon style="color:lightgray"</p>
-            <p>&#40;click&#41;="sidenav&#46;toggle&#40;&#41;" class="material-icons"&gt;menu&lt;/mat-icon&gt;&lt;/button&gt;</p>
+            <p> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&lt;button mat-icon-button attr.aria-label="&#123; &#123;sidenavAriaLabel&#125; &#125;" role="button" attr.aria-expanded="&#123; &#123;sidenavVisibility&#125; &#125;" aria-haspopup="true" aria-hidden="false" &gt; </p>
+            <p>&lt;mat-icon style="color:lightgray"&#40;click&#41;="toggleSideNav&#40;&#41;" class="material-icons" &gt;menu&lt;/mat-icon&gt;&lt;/button&gt;</p>
             <p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&lt;button mat-button&gt;&lt;img class ="logo-small" src="/assets/logo-small.png"&gt;&lt;/button&gt;</p>
             <p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Ignite Design System</p>
             <p>&nbsp;&nbsp;&nbsp;&nbsp;&lt;/mat-toolbar&gt;</p>
@@ -39,5 +39,23 @@
             <p>&lt;/mat-sidenav-container&gt;</p>
         </table>
     </div></mat-tab>
+    <mat-tab label="TS">
+        <div class="tab-height">
+            <p>@ViewChild&#40;'sidenav'&#41; sidenav: any;</p>
+            <p>sidenavAriaLabel: string;</p>
+            <p>sidenavVisibility: string;</p>
+            <p>private sidenavOpenedText: string = "Close Side Navigation";</p>
+            <p>private sidenavClosedText: string = "Open Side Navigation";</p>
+            <p>ngOnInit&#40;&#41;: void &#123;</p>
+            <p>&nbsp;this.sidenavAriaLabel = this.sidenav.opened ? this.sidenavOpenedText : this.sidenavClosedText;</p>
+            <p>this.sidenavVisibility = this.sidenav.opened;</p>
+            <p>&#125;</p>
+            <p>toggleSideNav&#40;&#41;: void &#125; </p>
+            <p>&nbsp;this.sidenav.toggle&#40;&#41;;</p>
+            <p>&nbsp;this.sidenavAriaLabel = this.sidenav.opened ? this.sidenavOpenedText : this.sidenavClosedText;</p>
+            <p>this.sidenavVisibility = this.sidenav.opened;</p>
+            <p>&#123;</p>
+        </div>
+    </mat-tab>
 </mat-tab-group>
 <markdown [content]="notes"></markdown>
