--- a/demo-app/app/demo/demo-dialog/demo-dialog.html
+++ b/demo-app/app/demo/demo-dialog/demo-dialog.html
@@ -24,7 +24,9 @@
             <p>&nbsp;selectedOption: string;</p>
             <p>&nbsp;constructor(public dialog: MatDialog) &#123;}</p>
             <p>&nbsp;openDialog() &#123;</p>
-            <p>&nbsp;let dialogRef = this.dialog.open(DemoDialogComponentDialog);</p>
+            <p>&nbsp;const config = new MatDialogConfig();</p>
+            <p>&nbsp;config.role = "alertdialog";</p>
+            <p>&nbsp;let dialogRef = this.dialog.open(DemoDialogComponentDialog, config);</p>
             <p>&nbsp;dialogRef.afterClosed().subscribe(result => &#123;</p>
             <p>&nbsp;&nbsp;this.selectedOption = result;</p>
             <p>&nbsp;&nbsp;&#125;);</p>
