--- a/src/right-drawer/right-drawer.html
+++ b/src/right-drawer/right-drawer.html
@@ -6,7 +6,9 @@
     (click)="closeDrawer()"
     class="close-icon"
     aria-label="Close"
-  >
+    attr.aria-hidden="{{!open}}"
+    tabindex="0" 
+    ignA11yClick>
     close
   </mat-icon>
 </div>
