--- a/demo-app/app/demo/demo-empty-state/demo-empty-state.html
+++ b/demo-app/app/demo/demo-empty-state/demo-empty-state.html
@@ -37,3 +37,70 @@
     </div></mat-tab>
 </mat-tab-group>
 <markdown [content]="notes"></markdown>
+
+<h2>Empty State Components</h2>
+
+<mat-accordion id="accordion">
+    <mat-expansion-panel>
+        <mat-expansion-panel-header>
+            <mat-panel-title><b>
+                empty-state-title
+            </b></mat-panel-title>
+            <mat-panel-description><i>The empty state title component allows for a title on the empty state container.</i></mat-panel-description>
+        </mat-expansion-panel-header>
+        <mat-tab-group>
+            <mat-tab label="Component Styling"><div class="tab-height">
+                <ul>
+                    <li>Titles should be concise and not contain descriptions.</li>
+                    <li>Titles should be located above all other empty state sub components.</li>
+                    <li>Titles should be centered.</li>
+                    
+                </ul>
+            </div></mat-tab>
+            <mat-tab label="HTML"><div class="tab-height">
+                <p>&lt;ign-empty-state-title&gt; &lt;/ign-empty-state-title&gt;</p>
+            </div></mat-tab>
+        </mat-tab-group>
+    </mat-expansion-panel>
+    <mat-expansion-panel>
+        <mat-expansion-panel-header>
+            <mat-panel-title><b>
+                empty-state-description
+            </b></mat-panel-title>
+            <mat-panel-description><i>The empty state description component allows for a description in the empty state.</i></mat-panel-description>
+        </mat-expansion-panel-header>
+        <mat-tab-group>
+            <mat-tab label="Component Styling"><div class="tab-height">
+                <ul>
+                    <li>Descriptions should be brief.</li>
+                    <li>Descriptions should inform the user of the empty state.</li>
+                    <li>Descriptions should be located below the empty-state-title component.</li>
+                    <li>Descriptions may or may not include a redirect to the previous or other pages.</li>
+                    
+                </ul>
+            </div></mat-tab>
+            <mat-tab label="HTML"><div class="tab-height">
+                <p>&lt;ign-empty-state-description&gt; &lt;/ign-empty-state-description&gt;</p>
+            </div></mat-tab>
+        </mat-tab-group>
+    </mat-expansion-panel>
+    <mat-expansion-panel>
+        <mat-expansion-panel-header>
+            <mat-panel-title><b>
+                empty-state-image
+            </b></mat-panel-title>
+            <mat-panel-description><i>The empty state image component allows for an image within the empty state.</i></mat-panel-description>
+        </mat-expansion-panel-header>
+        <mat-tab-group>
+            <mat-tab label="Component Styling"><div class="tab-height">
+                <ul>
+                    <li>Images should only consume a small portion of the empty state.</li>
+                    <li>Images should be contained within the empty state but not the empty-state-description component.</li>           
+                </ul>
+            </div></mat-tab>
+            <mat-tab label="HTML"><div class="tab-height">
+                <p>&lt;ign-empty-state-image&gt; &lt;/ign-empty-state-image&gt;</p>
+            </div></mat-tab>
+        </mat-tab-group>
+    </mat-expansion-panel>
+</mat-accordion>
