--- a/demo-app/app/demo/demo-empty-state/demo-empty-state.html
+++ b/demo-app/app/demo/demo-empty-state/demo-empty-state.html
@@ -76,6 +76,7 @@
                     <li>Descriptions should inform the user of the empty state.</li>
                     <li>Descriptions should be located below the empty-state-title component.</li>
                     <li>Descriptions may or may not include a redirect to the previous or other pages.</li>
+                    <li>Descriptions can include buttons and button groups.</li>
                     
                 </ul>
             </div></mat-tab>
@@ -95,7 +96,8 @@
             <mat-tab label="Component Styling"><div class="tab-height">
                 <ul>
                     <li>Images should only consume a small portion of the empty state.</li>
-                    <li>Images should be contained within the empty state but not the empty-state-description component.</li>           
+                    <li>Images should be contained within the empty state but not the empty-state-description component.</li>   
+                    <li>The default empty state displays the image component in the lower right hand corner.</li>        
                 </ul>
             </div></mat-tab>
             <mat-tab label="HTML"><div class="tab-height">
