--- a/demo-app/app/demo/demo-empty-state/demo-empty-state.html
+++ b/demo-app/app/demo/demo-empty-state/demo-empty-state.html
@@ -13,7 +13,7 @@
             <p><a [routerLink]="['empty-state-example']" target="_blank">
                 Click Here
             </a> to go to an example of an empty state page.</p>
-            <p>You'll need to hit the back button to come back!<p>
+            <p>You'll need to hit the back button to come back!</p>
         </div></mat-tab>
     <mat-tab label="HTML"><div class="tab-height">
         <table style="width:100%">
