--- a/src/list-content/list-content.html
+++ b/src/list-content/list-content.html
@@ -1,2 +1,3 @@
+<a id="skip-list" class="skip-main" href="javascript:void(0)" target="_self">Jump to content</a>
 <ng-content select="ign-list-selection"></ng-content>
-<ng-content select="ign-list-content-panel"></ng-content>
+<div id="list-content-skip" role="main" tabIndex="-1"><ng-content select="ign-list-content-panel"></ng-content></div>
