--- a/demo-app/app/demo/demo-list-content/demo-list-content.html
+++ b/demo-app/app/demo/demo-list-content/demo-list-content.html
@@ -22,7 +22,7 @@
                     </ign-list-selection-item>
                 </ign-list-selection>
                 <!-- Content View -->
-                <ign-list-content-panel>
+                    <ign-list-content-panel>
                     <ign-list-content-empty-state>
                         <button
                                 mat-button
@@ -36,7 +36,7 @@
                         <ign-card-title>Content View</ign-card-title>
                     </ign-list-content-unselected-state>
                     <ign-list-content-card>
-                        This is content!
+                            This is content!
                     </ign-list-content-card>
                 </ign-list-content-panel>
             </ign-list-content>
@@ -53,7 +53,7 @@
         <p>    &nbsp;&nbsp;  &lt;/ign-list-selection-item&gt; </p>
         <p>    &nbsp; &lt;/ign-list-selection&gt; </p>
         <p>    &nbsp; &lt;!-- Content View --&gt; </p>
-        <p>    &nbsp; &lt;ign-list-content-panel&gt; </p>
+        <p>    &nbsp; &lt;ign-list-content-panel role="main" &gt; </p>
         <p>    &nbsp;&nbsp;  &lt;ign-list-content-empty-state&gt; </p>
         <p>   &nbsp;&nbsp;&nbsp;&nbsp;&lt;button </p>
         <p>   &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;  mat-button </p>
