--- a/demo-app/app/demo/demo-radio-button/demo-radio-button.html
+++ b/demo-app/app/demo/demo-radio-button/demo-radio-button.html
@@ -4,7 +4,8 @@
 
 <p>Radio buttons allow the user to select one option from a set. Use radio buttons for exclusive selection if user
     needs to see all available options side-by-side. Otherwise, consider a dropdown, which uses
-    less space than displaying all options.</p>
+    less space than displaying all options. In code Radio Buttons are out of the box Angular Material components. 
+    Within Sketch they are presented in horizontal and vertical layouts.</p>
 
 <p>See <a href="https://material.io/guidelines/components/selection-controls.html#selection-controls-radio-button">Material Design Radio Button</a>.
     and <a href="https://material.angular.io/components/radio/overview">Angular Material Radio Button</a>.</p>
