adding dialog fix post-scrape

--- a/demo-app/app/demo/demo-dialog/demo-dialog.html
+++ b/demo-app/app/demo/demo-dialog/demo-dialog.html
@@ -41,14 +41,17 @@
 
 <h2>Style</h2>
 
-<strong>Do</strong>
+<h3>Do</h3>
 
 <ul><li>Do use flat buttons for dialog actions</li><li>Do use short, succinct labels that are verbs</li><li>Do use a titles on the dialog when it helps organize the description</li><li>Do use only a description when a title isn't necessary</li><li>For Simple dialogs, use only description text without a title</li><li>Do use confirmation dialogs to inform the user of consequences or clarify desired action(s).</li></ul>
 
-<strong>Don't</strong>
+<h3>Don't</h3>
 
-<ul><li>Don't use raised buttons (except for forms in dialogs)</li><li>Don't use a close button or a dark background on the simple dialog</li><li>Don't use "Yes" or "No" for button actions, instead use verbs.</li><li><p>Don't use a close icon</p></li><li><p>### Size</p><ul><li>Confirmation<ul><li>maxWidth: 360px;</li><li>height: (auto)</li></ul></li><li>Simple: (TBD based on context)</li><li>Forms<ul><li>maxWidth: 672px;</li><li>height: (in research)</li><li>dialogs should not take 100% of the screen width or height (except in modal)</li><li>for implementing size: see <a href="https://material.angular.io/components/form-field/overview">MatDialogConfig</a> in Angular
-Material docs for dialogs.</li></ul></li></ul></li></ul>
+<ul><li>Don't use raised buttons (except for forms in dialogs)</li><li>Don't use a close button or a dark background on the simple dialog</li><li>Don't use "Yes" or "No" for button actions, instead use verbs.</li><li><p>Don't use a close icon</p></li></ul>
+    
+<h3>Size</h3>
+<ul><li>Confirmation<ul><li>maxWidth: 360px;</li><li>height: (auto)</li></ul></li><li>Simple: (TBD based on context)</li><li>Forms<ul><li>maxWidth: 672px;</li><li>height: (in research)</li><li>dialogs should not take 100% of the screen width or height (except in modal)</li><li>for implementing size: see <a href="https://material.angular.io/components/form-field/overview">MatDialogConfig</a> in Angular
+Material docs for dialogs.</li></ul></li></ul>
 
 <h2>Content</h2>
 
