--- a/src/right-drawer/right-drawer.html
+++ b/src/right-drawer/right-drawer.html
@@ -5,7 +5,7 @@
   <mat-icon
     (click)="closeDrawer()"
     class="close-icon"
-    aria-label="Close"
+    attr.aria-label="{{ 'CLOSE' | translateIDS }}"
     attr.aria-hidden="{{!open}}"
     tabindex="0" 
     ignA11yClick>
