--- a/src/expandable-fab/expandable-fab.html
+++ b/src/expandable-fab/expandable-fab.html
@@ -1,7 +1,7 @@
 <div [ngClass]="{'active': isOpen}" class="buttons-container" role="menu">
     <ng-content *ngIf="isOpen"></ng-content>
     <div class="main-button-container" da="mainButton">
-      <a mat-fab class="icon-container" ignA11yViewAccessible ignA11yClick (click)="handleClick()"  attr.aria-label={{ariaLabelValue}} aria-haspopup="true" role="button" attr.aria-expanded="{{isOpen}}">
+      <a mat-fab class="icon-container" ignA11yViewAccessible ignA11yClick (click)="handleClick()"  attr.aria-label="{{ariaLabelValue | translateIDS}}" aria-haspopup="true" role="button" attr.aria-expanded="{{isOpen}}">
         <mat-icon style="position:absolute"  class="icon icon-secondary" [ngClass]="{'icon-secondary-active': isOpen}">
           clear
         </mat-icon>
