Enhanced ign-right-drawer. See changelog

--- a/src/right-drawer/right-drawer.html
+++ b/src/right-drawer/right-drawer.html
@@ -1,15 +1,22 @@
-<div *ngIf="!!title" class="title-container">
-  <h2 class="title">
-    {{ title }}
-  </h2>
-  <mat-icon
-    (click)="closeDrawer()"
-    class="close-icon"
-    attr.aria-label="{{ 'CLOSE' | translateIDS }}"
-    attr.aria-hidden="{{!open}}"
-    tabindex="0" 
-    ignA11yClick>
-    close
-  </mat-icon>
-</div>
-<ng-content></ng-content>
+<div id="backdrop" (click)="closeDrawer()"></div>
+<mat-drawer
+  [opened]="open"
+  [ngStyle]="{'width' : open ? '16rem' : '0'}"
+  [disableClose]="true">
+  <div *ngIf="!!title" class="title-container">
+    <h2 class="title">
+      {{ title }}
+    </h2>
+    <button
+      mat-icon-button
+      (click)="closeDrawer()"
+      attr.aria-label="{{ 'CLOSE' | translateIDS }}"
+      attr.aria-hidden="{{!open}}">
+      <mat-icon
+        class="close-icon">
+        close
+      </mat-icon>
+    </button>
+  </div>
+  <ng-content></ng-content>
+</mat-drawer>
