--- a/src/input-mask/currency-mask/currency-mask.html
+++ b/src/input-mask/currency-mask/currency-mask.html
@@ -1,6 +1,6 @@
 <ign-input-mask [value]="value" class="display">
-    <div *displayMode="false" class="display">
+    <div *displayMode="displayModeBool" class="display">
     </div>
-    <div *editMode="true" class="display">
+    <div *editMode="editModeBool" class="display">
     </div>
 </ign-input-mask>
