fixing the code

--- a/src/input-mask/currency-mask/currency-mask.html
+++ b/src/input-mask/currency-mask/currency-mask.html
@@ -1,6 +1,4 @@
-<ign-input-mask [value]="value" class="display">
+<ign-input-mask [value]="value" class="display" (click)="onClick()">
     <div *displayMode="displayModeBool" class="display">
-    </div>
-    <div *editMode="editModeBool" class="display">
     </div>
 </ign-input-mask>
