--- a/src/input-mask/input-mask.html
+++ b/src/input-mask/input-mask.html
@@ -1,11 +1,11 @@
 <div *ngIf="displayModeChild.displayMode; then displayMode; else editMode"></div>
 <ng-template #displayMode>
     <mat-form-field>
-        <input matInput [value]="value | currency:'USD':'symbol': '.4'">
+        <input (blur)="onBlur()" matInput [value]="value | currency:'USD':'symbol': '.4'">
     </mat-form-field>
 </ng-template>
 <ng-template #editMode class="display">
     <mat-form-field>
-        <input matInput [value]="value">
+        <input (blur)="onBlur()" matInput [value]="value">
     </mat-form-field>
 </ng-template>
