--- a/src/currency-input-mask/base-input-mask/input-mask.html
+++ b/src/currency-input-mask/base-input-mask/input-mask.html
@@ -1,7 +1,7 @@
 <div *ngIf="displayModeChild.displayMode; then displayMode; else editMode"></div>
 <ng-template #displayMode>
     <mat-form-field>
-        <input (blur)="onBlur()" matInput [value]="value | currency:currencyCode:'symbol': '.4'">
+        <input #displayFieldInput (blur)="onBlur()" matInput [value]="value | currency:currencyCode:'symbol': '.4'">
     </mat-form-field>
 </ng-template>
 <ng-template #editMode class="display">
