added accessible click option to profile icon

--- a/src/sidenav/sidenav-header/sidenav-header.html
+++ b/src/sidenav/sidenav-header/sidenav-header.html
@@ -4,6 +4,7 @@
       routerLink="/profile"
       class="user-picture-container"
       tabindex="0"
+      ignA11yClick
     >
       <i class="material-icons circle">account_circle</i>
     </div>
