Updated accessibility across the board: added roles, aria-live regions, added several components to have tabindex set to 0, reworked expandable-search to be more intuitive to use with keyboard

--- a/src/card/card-toolbar/card-toolbar.html
+++ b/src/card/card-toolbar/card-toolbar.html
@@ -1,4 +1,6 @@
-<ng-content select="ign-card-title"></ng-content>
-<div class="right-actions">
-  <ng-content></ng-content>
+<div role="toolbar">
+  <ng-content select="ign-card-title"></ng-content>
+  <div class="right-actions">
+    <ng-content></ng-content>
+  </div>
 </div>
