--- a/src/date-range/date-range.html
+++ b/src/date-range/date-range.html
@@ -1,27 +1,31 @@
 <form [formGroup]="formGroup">
-  <mat-form-field role="group">
-    <input
-      #startPickerInput="matDatepickerInput"
-      [formControlName]="startDateControlName"
-      matInput
-      placeholder="{{ 'START_DATE_TYPEAHEAD' | translateIDS }}"
-      [matDatepicker]="startPicker"
-      [matDatepickerFilter]="startDateFilter"
-    >
+  <div id="dateRange" attr.aria-label="{{ 'DATE_RANGE' | translateIDS }}">
+    <mat-form-field role="group">
+      <input
+        #startPickerInput="matDatepickerInput"
+        [formControlName]="startDateControlName"
+        matInput
+        placeholder="{{ 'START_DATE_TYPEAHEAD' | translateIDS }}"
+        [matDatepicker]="startPicker"
+        [matDatepickerFilter]="startDateFilter"
+        aria-describedby="dateRange"
+      >
 
-    <mat-datepicker-toggle matSuffix [for]="startPicker"></mat-datepicker-toggle>
-    <mat-datepicker #startPicker></mat-datepicker>
-  </mat-form-field>
-  <mat-form-field role="group">
-    <input
-      #endPickerInput="matDatepickerInput"
-      [formControlName]="endDateControlName"
-      matInput
-      placeholder="{{ 'END_DATE_TYPEAHEAD' | translateIDS }}"
-      [matDatepicker]="endPicker"
-      [matDatepickerFilter]="endDateFilter"
-    >
-    <mat-datepicker-toggle matSuffix [for]="endPicker"></mat-datepicker-toggle>
-    <mat-datepicker #endPicker [startAt]="startPicker._selected"></mat-datepicker>
-  </mat-form-field>
+      <mat-datepicker-toggle matSuffix [for]="startPicker"></mat-datepicker-toggle>
+      <mat-datepicker #startPicker></mat-datepicker>
+    </mat-form-field>
+    <mat-form-field role="group">
+      <input
+        #endPickerInput="matDatepickerInput"
+        [formControlName]="endDateControlName"
+        matInput
+        placeholder="{{ 'END_DATE_TYPEAHEAD' | translateIDS }}"
+        [matDatepicker]="endPicker"
+        [matDatepickerFilter]="endDateFilter"
+        aria-describedby="dateRange"
+      >
+      <mat-datepicker-toggle matSuffix [for]="endPicker"></mat-datepicker-toggle>
+      <mat-datepicker #endPicker [startAt]="startPicker._selected"></mat-datepicker>
+    </mat-form-field>
+  </div>
 </form>
