--- a/src/sidenav/sidenav-header/sidenav-header.html
+++ b/src/sidenav/sidenav-header/sidenav-header.html
@@ -1,4 +1,4 @@
-<div class="header-container">
+<div class="header-container" role="heading">
   <div class="user-profile-container">
     <div
       routerLink="/profile"
