--- a/src/sidenav/sidenav-list-item/sidenav-list-item.html
+++ b/src/sidenav/sidenav-list-item/sidenav-list-item.html
@@ -1,7 +1,9 @@
-<a
-  (click)="handleClick($event)"
-  class="app-link"
->
-  <i class="material-icons app-link-icon" aria-hidden="true">{{ icon }}</i>
-  <div class="app-link-text">{{ description }}</div>
-</a>
+<div role="listitem">
+  <a
+    (click)="handleClick($event)"
+    class="app-link"
+  >
+    <i class="material-icons app-link-icon" aria-hidden="true">{{ icon }}</i>
+    <div class="app-link-text">{{ description }}</div>
+  </a>
+</div>
