Adding ability to pass custom html into ign-list-selection-item and using _typography.scss

--- a/src/list-selection/list-selection-item/list-selection-item.html
+++ b/src/list-selection/list-selection-item/list-selection-item.html
@@ -3,5 +3,6 @@
   <div class="list-detail-info">
     <div *ngIf="!!title" class="list-detail-title">{{ title }}</div>
     <div *ngIf="!!subtitle" class="list-detail-subtitle">{{ subtitle }}</div>
+    <div *ngIf="!!statusText" class="list-detail-status">{{ statusText }}</div>
   </div>
 </div>
