Small tweak to the sidenav-list-item that allows us to use SVG icons as well as the default icons.

--- a/src/sidenav/sidenav-list-item/sidenav-list-item.html
+++ b/src/sidenav/sidenav-list-item/sidenav-list-item.html
@@ -2,6 +2,7 @@
   (click)="handleClick($event)"
   class="app-link"
 >
-  <i class="material-icons app-link-icon" aria-hidden="true">{{ icon }}</i>
+  <i *ngIf="!svgIcon" class="material-icons app-link-icon" aria-hidden="true">{{ icon }}</i>
+  <mat-icon *ngIf="svgIcon" class="material-icons app-link-icon" [svgIcon]="svgIcon"></mat-icon>
   <div class="app-link-text">{{ description }}</div>
 </a>
