added type button to button elements

--- a/src/expandable-search/expandable-search.html
+++ b/src/expandable-search/expandable-search.html
@@ -23,6 +23,7 @@
     (keyup)="emitSearchEvents()">
   <button
     *ngIf="searchInput.value"
+    type="button"
     (click)="searchInput.value=''; emitSearchEvents()"
     mat-icon-button
     matSuffix
